@@ -170,6 +170,16 @@ tag expects the executables to be found using the PATH environment variable.</td
           mapping.</td>
       <td valign="TOP">No</td>
     </tr>
+    <tr>
+      <td valign="TOP">revision</td>
+      <td valign="TOP">Retrieve the specified revision.</td>
+      <td valign="TOP">No</td>
+    </tr>
+    <tr>
+      <td valign="TOP">userid</td>
+      <td valign="TOP">Use the specified userid.</td>
+      <td valign="TOP">No</td>
+    </tr>
 </table>
 <h3><a name="nested">Nested Elements</a></h3>
 
