@@ -63,6 +63,8 @@ Other changes:
 * Added -noclasspath option to allow running ant WITHOUT using CLASSPATH env
   variable. Modified ant.bat to do this so that %CLASSPATH% is not looked at.
 
+* Added revision and userid attributes to <pvcs> documentation.
+
 Changes from Ant 1.6.2 to current Ant 1.6 CVS version
 =====================================================
 
